# pyproject-devenv

./: .bumpversion.cfg  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  api.rst  conf.py  contributing.rst  index.rst  license.rst  pep_section.py  requirements.txt  usage.rst
doc-source/_templates/sidebar/: navigation.html
doc-source/api/: pyproject-devenv.rst
pyproject_devenv/: __init__.py  __main__.py  config.py
tests/: test_cli.py  test_config.py  test_devenv.py  test_exceptions.py
