[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "pyproject-devenv"
version = "0.0.0"
description = "Create virtual environments using pyproject.toml metadata."
readme = "README.rst"
keywords = [ "virtualenv", "pyproject", "toml",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/pyproject-devenv"
"Issue Tracker" = "https://github.com/domdfcoding/pyproject-devenv/issues"
"Source Code" = "https://github.com/domdfcoding/pyproject-devenv"
Documentation = "https://pyproject-devenv.readthedocs.io/en/latest"

[project.scripts]
pyproject-devenv = "pyproject_devenv.__main__:main"

[tool.mkrecipe]
conda-channels = [ "domdfcoding",]
extras = "all"
license-key = "MIT"
package = "pyproject_devenv"
