[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "pyproject-devenv"
version = "0.0.0"
description = "Create virtual environments using pyproject.toml metadata."
readme = "README.rst"
keywords = [ "pyproject", "toml", "virtualenv",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/pyproject-devenv"
"Issue Tracker" = "https://github.com/repo-helper/pyproject-devenv/issues"
"Source Code" = "https://github.com/repo-helper/pyproject-devenv"
Documentation = "https://pyproject-devenv.readthedocs.io/en/latest"

[project.scripts]
pyproject-devenv = "pyproject_devenv.__main__:main"
devenv = "pyproject_devenv.__main__:main"

[tool.mkrecipe]
conda-channels = [ "repo-helper",]
extras = "all"
license-key = "MIT"
package = "pyproject_devenv"

[tool.whey]
base-classifiers = [ "Typing :: Typed",]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "pyproject_devenv"
