# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[options.entry_points]
console_scripts =
    pyproject-devenv=pyproject_devenv.__main__:main
    devenv=pyproject_devenv.__main__:main
